2008-12-09 [colin]	3.6.1cvs64

	* src/prefs_filtering.c
		Fix bug 1789, 'filtering account selection 
		(regression)'. Filtering on sending-only
		accounts can be a little useful when using
		filtering via Tools menu.

2008-12-07 [paul]	3.6.1cvs63

	* src/prefs_actions.c
		don't auto-select first entry (same as other
		similar dialogs)
	* src/gtk/pluginwindow.c
		these parents don't have children so don't look
		for them

2008-12-07 [paul]	3.6.1cvs62

	* src/prefs_account.c
	* src/gtk/pluginwindow.c
	* src/gtk/prefswindow.c
	* src/gtk/prefswindow.h
		auto-select first page

2008-12-05 [colin]	3.6.1cvs61

	* src/codeconv.c
	* src/procmime.c
		Fix bug 1788, 'CM crashes re-encoding 
		encoded parameters' (introduced in cvs40)

2008-12-05 [paul]	3.6.1cvs60

	* src/prefs_common.h
		remove gpg prefs that are no longer needed here

2008-12-03 [colin]	3.6.1cvs59

	* src/msgcache.c
		Speed up cache reading (about 10% gain)
	* src/summaryview.c
	* src/gtk/gtksctree.c
		Speed up expand/collapse all threads
		(about 95% gain)

2008-12-03 [paul]	3.6.1cvs58

	* configure.ac
		eradicate gcc4's signedness warnings
		fix building with gnuTLS on (Open)Solaris

2008-12-01 [colin]	3.6.1cvs57

	* src/gtk/gtkcmclist.c
		Fix column headers

2008-12-01 [colin]	3.6.1cvs56

	* src/plugins/pgpinline/pgpinline.c
		Fix bug 1779, 'PGP Inline badly handles 
		multipart'. Properly dump the current part
		instead of running around with scissors

2008-11-30 [paul]	3.6.1cvs55

	* manual/advanced.xml
	* manual/plugins.xml
	* src/prefs_toolbar.c
		remove the verb from the page title and
		update references in the manual

2008-11-30 [paul]	3.6.1cvs54

	* src/prefs_other.c
		move Other/ page to Other/Miscellaneous
	* src/gtk/prefswindow.c
		make parent page unselectable

2008-11-29 [paul]	3.6.1cvs53

	* README
		add the new 'primary_paste_unselects' hidden
		option, add missing 'log_[...]_color' options,
		and reformat the text
	* manual/advanced.xml
		add the new 'primary_paste_unselects' hidden