@@ -1,3 +1,11 @@
+2008-12-09 [paul]	3.6.1cvs65
+
+	* src/messageview.c
+		fix bug 1787, 'Prevent automatic PGP inline
+		decryption attempts' use the noticeview to display
+		decryption failure messages instead of the irritating
+		popup dialog
+
 2008-12-09 [colin]	3.6.1cvs64
 
 	* src/prefs_filtering.c
